# artifical-genome-rs

./: Cargo.toml  README.md
src/: base4.rs  dna_base.rs  graph.rs  lib.rs  main.rs
